Fix: Adjust styles for device comparison and review tables; improve layout and text overflow handling

--- a/style.css
+++ b/style.css
@@ -1101,10 +1101,10 @@ a {
     margin-bottom: 30px;
 }
 
-.module,
+/* .module,
 a.module-phones-link {
     position: relative;
-}
+} */
 
 .section-heading {
     margin-top: 10px !important;
@@ -1168,10 +1168,10 @@ a.module-phones-link {
     margin: 0 7px;
 }
 
-.module,
+/* .module,
 a.module-phones-link {
     position: relative;
-}
+} */
 
 .module a {
     font: 700 13px / 18px system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
@@ -1188,7 +1188,7 @@ a.module-phones-link {
     color: #333;
     margin: 0 10px;
     border: none;
-    position: relative;
+    /* position: relative; */
 }
 
 
